# dune-istl

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COPYING  DuneIstlConfig.cmake.in  INSTALL  LICENSE.md  MANIFEST.in  Makefile.am  README  README.md  TODO  __init__.py  _istl.cc  autogen.sh  bcrsmatrix.hh  bvector.hh  config.h.cmake  configure.ac  dune-istl-config.cmake.in  dune-istl.pc.in  dune.module  iterator.hh  operators.hh  package.py  preconditioners.hh  prevent-cherry-picks  pyproject.toml  setup.py  slice.hh  solvers.hh  stamp-vc
cmake/modules/: AddARPACKPPFlags.cmake  AddSuperLUFlags.cmake  CMakeLists.txt  ConfigSafeGuards.cmake  DuneIstlMacros.cmake  FindARPACK.cmake  FindARPACKPP.cmake  FindSuperLU.cmake  Makefile.am  solvertemplates.cc  solvertemplates.hh
doc/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist.am  blockstructure.eps  istl.bib  istl.tex
doc/comm/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist.am  buildindexset.hh  communication.tex  indexset.cc  poosc08.cc  poosc08_test.cc  reverse.hh
doc/comm/figures/: Makefile.am
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Doxylocal  Makefile.am  mainpage  mainpage.txt  modules  modules.txt
dune/istl/: CMakeLists.txt  Makefile.am  allocator.hh  asyncblockpreconditioner.hh  asyncloopsolver.hh  asyncstoppingcriteria.hh  basearray.hh  bccsmatrix.hh  bccsmatrixinitializer.hh  bcrsmatrix.hh  bdmatrix.hh  blocklevel.hh  btdmatrix.hh  bvector.hh  cg_solver.hh  cholmod.hh  colcompmatrix.hh  commgraphbasedmatrixrepartitioning.hh  commgraphbasedvectorredistribute.hh  communicator.hh  diagonalmatrix.hh  dilu.hh  ellmatrix.hh  factory.hh  fieldtype.hh  flatvectorview.hh  foreach.hh  foreachmatrixentry.hh  forwarddeclarations.hh  generic_iterative_method.hh  generic_step.hh  gsetc.hh  ildl.hh  ilu.hh  ilusubdomainsolver.hh  indexset.hh  indicessyncer.hh  interface.hh  io.hh  is_valid.hh  (+55 more)
dune/istl/bellmatrix/: CMakeLists.txt  Makefile.am  host.hh
dune/istl/blockkrylov/: CMakeLists.txt  blas.hh  blockbicgstab.hh  blockcg.hh  blockgmres.hh  blockinnerproduct.hh  cholesky.hh  matrixalgebra.hh  utils.hh
dune/istl/blockvector/: CMakeLists.txt  Makefile.am  host.hh
dune/istl/common/: CMakeLists.txt  counter.hh  registry.hh
dune/istl/eigenvalue/: CMakeLists.txt  Makefile.am  arpackpp.hh  poweriteration.hh
dune/istl/ellmatrix/: CMakeLists.txt  Makefile.am  cuda.hh  cuda_layout.hh  host.hh  iterator.hh  layout.hh
dune/istl/mixins/: absoluteAccuracy.hh  connection.hh  eps.hh  iterativeRefinements.hh  maxSteps.hh  minimalAccuracy.hh  mixins.hh  relativeAccuracy.hh  verbosity.hh
dune/istl/paamg/: CMakeLists.txt  Makefile.am  aggregates.hh  amg.hh  combinedfunctor.hh  construction.hh  dependency.hh  fastamg.hh  fastamgsmoother.hh  galerkin.hh  globalaggregates.hh  graph.hh  graphcreator.hh  hierarchy.hh  indicescoarsener.hh  kamg.hh  matrixhierarchy.hh  parameters.hh  pinfo.hh  properties.hh  renumberer.hh  repartitioningstrategy.cc  repartitioningstrategy.hh  smoother.hh  transfer.hh  twolevelmethod.hh
dune/istl/preconditioners/: CMakeLists.txt  Makefile.am  sequentialblockjacobi.hh  sequentialjacobi.hh  sequentialsor.hh
dune/istl/test/: .gitignore  CMakeLists.txt  Makefile.am  assemble_random_matrix_vectors.hh  asyncloopsolvertest.cc  basearraytest.cc  bcrsalloctest.cc  bcrsassigntest.cc  bcrsbuild.cc  bcrsimplicitbuild.cc  bcrsmatrixtest.cc  bcrsnormtest.cc  blocklevel.cc  bvectortest.cc  cgconditiontest.cc  cholmodtest.cc  complexdata.hh  complexmatrixtest.cc  complexrhstest.cc  cuda_ellmatrixtest.cc  cuda_vectortest.cc  cudatest.cc  diagonalmatrixtest.cc  dilutest.cc  dotproducttest.cc  exaprintvectortest.cc  factorytest.cc  factorytest_anisotropic.hh  factorytest_config.ini  fieldtype.cc  fieldvectortest.cc  foreachmatrixentrytest.cc  foreachtest.cc  hilbertmatrix.hh  iluildltest.cc  indicestest.cc  inverseoperator2prectest.cc  iotest.cc  laplacian.hh  ldltest.cc  (+40 more)
dune/istl/tests/: CMakeLists.txt  cg_2d_test.cpp  generic_iterative_method.cpp  rcg_2d_test.cpp  relative_energy_error_termination_criterion.cpp  residual_based_termination_criterion.cpp  tcg_2d_test.cpp  test.cpp  trcg_2d_test.cpp
dune/istl/tutorial/: CMakeLists.txt  Makefile.am  example.cc
dune/istl/vector/: CMakeLists.txt  Makefile.am  cuda.hh  cuda_allocator.cu  cuda_allocator.hh  cuda_backend.cu  cuda_backend.hh  cuda_kernels.cu  host.hh
dune/python/istl/: CMakeLists.txt  bcrsmatrix.hh  bvector.hh  iterator.hh  matrixindexset.hh  operators.hh  preconditioners.hh  slice.hh  solvers.hh
istl/: Makefile.am  allocator.hh  basearray.hh  bcrsmatrix.hh  bdmatrix.hh  bvector.hh  communicator.hh  gsetc.hh  ilu.hh  indexset.hh  indicessyncer.hh  interface.hh  io.hh  istlexception.hh  matrix.hh  matrixindexset.hh  matrixredistribute.hh  matrixutils.hh  mpitraits.hh  operators.hh  overlappingschwarz.hh  owneroverlapcopy.hh  pardiso.hh  plocalindex.hh  preconditioners.hh  remoteindices.hh  repartition.hh  scalarproducts.hh  scaledidmatrix.hh  schwarz.hh  selection.hh  solvercategory.hh  solvers.hh  superlu.hh  supermatrix.hh  vbcrsmatrix.hh  vbvector.hh
istl/paamg/: Makefile.am  aggregates.hh  amg.hh  combinedfunctor.hh  construction.hh  dependency.hh  galerkin.hh  globalaggregates.hh  graph.hh  graphcreator.hh  hierarchy.hh  indicescoarsener.hh  pinfo.hh  pmatrix.hh  renumberer.hh  smoother.hh  transfer.hh
istl/paamg/test/: .gitignore  Makefile.am  amgtest.cc  anisotropic.hh  graphtest.cc  (+4 more)
istl/test/: .gitignore  Makefile.am  bcrsbuild.cc  bvectortest.cc  indicestest.cc  laplacian.hh  matrixiteratortest.cc  matrixredisttest.cc  matrixtest.cc  matrixutilstest.cc  overlappingschwarztest.cc  selectiontest.cc  superlutest.cc  syncertest.cc  test_pardiso.cc
istl/tutorial/: .gitignore  example.cc
lib/: CMakeLists.txt  Makefile.am  directsolvers.cc.in  duneistlam2cmake.lib  iterativesolvers.cc.in  preconditioners.cc.in  solverrepository.cc
lib/test/: CMakeLists.txt  solverfactorytest.cc.in
src/: CMakeLists.txt  istl-playground.cc  istl-solver-playground.cc  istl-solver-playground.hh  playground.ini
(+114 files in other folders)
