# $Id$

SUBDIRS = . tutorial test paamg

istldir = $(includedir)/dune/istl
istl_HEADERS = basearray.hh \
	bcrsmatrix.hh \
	bdmatrix.hh \
	btdmatrix.hh \
	bvector.hh \
	communicator.hh \
	diagonalmatrix.hh \
	gsetc.hh \
	ilu.hh \
	ilusubdomainsolver.hh \
	indexset.hh \
	indicessyncer.hh \
	interface.hh \
	io.hh \
	istlexception.hh \
	localindex.hh \
	matrix.hh \
	matrixindexset.hh \
	matrixmarket.hh\
	matrixmatrix.hh \
	matrixredistribute.hh \
	matrixutils.hh \
	mpitraits.hh \
	multitypeblockmatrix.hh \
	multitypeblockvector.hh \
	novlpschwarz.hh \
	operators.hh \
	overlappingschwarz.hh \
	owneroverlapcopy.hh \
	pardiso.hh \
	plocalindex.hh \
	preconditioners.hh \
	remoteindices.hh \
	repartition.hh \
	scalarproducts.hh \
	scaledidmatrix.hh \
	schwarz.hh \
	selection.hh \
	solvercategory.hh \
	solvers.hh \
	solvertype.hh \
	superlu.hh \
	supermatrix.hh \
	vbvector.hh


include $(top_srcdir)/am/global-rules
