SUBDIRS = test

paamgdir = $(includedir)/dune/istl/paamg
paamg_HEADERS = aggregates.hh          \
	amg.hh                         \
	combinedfunctor.hh             \
	construction.hh                \
	dependency.hh                  \
	fastamg.hh                     \
	fastamgsmoother.hh             \
	galerkin.hh                    \
	globalaggregates.hh            \
	graph.hh                       \
	graphcreator.hh                \
	hierarchy.hh                   \
	indicescoarsener.hh            \
	kamg.hh                        \
	parameters.hh                  \
	pinfo.hh                       \
	properties.hh                  \
	renumberer.hh                  \
	smoother.hh                    \
	transfer.hh                    \
	twolevelmethod.hh

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
